--- a/Numpy lab.ipynb
+++ b/Numpy lab.ipynb
@@ -44,13 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import numpy as np"
    ]
   },
   {
@@ -77,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "py_range = np.array(range(5))\n",
+    "py_list = np.array([0,1,2,3,4])"
    ]
   },
   {
@@ -108,30 +107,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the conversion rate for turning height in inches to meters\n",
     "list_height_inches = [65, 68, 73, 75, 78]\n",
     "\n",
-    "#Your code here"
+    "#Your code here\n",
+    "in_meters = np.array(list_height_inches) * 0.0254"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the conversion rate for turning weight in pounds to kilograms\n",
     "list_weight_pounds = [150, 140, 220, 205, 265]\n",
     "\n",
-    "#your code here"
+    "#your code here\n",
+    "in_kilos = np.array(list_weight_pounds) / 2.2046"
    ]
   },
   {
@@ -151,13 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[24.9613063  21.28692715 29.02550097 25.62324316 30.62382485]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "BMI = in_kilos / in_meters**2\n",
+    "print(BMI)"
    ]
   },
   {
@@ -169,13 +174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "identity = np.ones(5)"
    ]
   },
   {
@@ -187,13 +191,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "BMI * identity"
    ]
   },
   {
@@ -206,11 +220,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file has 21 lines.\n",
+      "The file has 8 cols.\n",
+      "['1', '105', '47', '85.4', '1.75', '5.1', '63', '33\\n']\n",
+      "['3', '116', '49', '95.3', '1.98', '8.2', '72', '10\\n']\n",
+      "['5', '112', '51', '89.4', '1.89', '7.0', '72', '95\\n']\n",
+      "['7', '121', '49', '99.8', '2.25', '2.5', '69', '42\\n']\n",
+      "['9', '110', '49', '89.2', '1.83', '7.1', '69', '62\\n']\n",
+      "['11', '114', '47', '94.4', '2.07', '5.3', '74', '90\\n']\n",
+      "['13', '114', '50', '91.6', '2.05', '10.2', '68', '47\\n']\n",
+      "['15', '125', '52', '101.3', '2.19', '10.0', '76', '98\\n']\n",
+      "['17', '106', '46', '87.0', '1.87', '3.6', '62', '18\\n']\n",
+      "['19', '110', '48', '90.5', '1.88', '9.0', '71', '99\\n']\n",
+      "['']\n"
+     ]
+    }
+   ],
    "source": [
     "#Open a text file (csv files are just plaintext separated by commas)\n",
     "f = open('bp.txt')\n",
@@ -218,15 +250,19 @@
     "print('The file has {} lines.'.format(n_rows)) #Print number of lines in the file\n",
     "f = open('bp.txt') #After using readlines, we must reopen the file\n",
     "n_cols = (len(f.readline().split('\\t'))) #The file has values separated by tabs; we read the first line and check it's length.\n",
-    "\n",
+    "print('The file has {} cols.'.format(n_cols))\n",
     "f = open('bp.txt')\n",
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
+    "zeros = np.zeros([21,8])\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
     "    #Hint: skip the first row (it's just column names, not the data.)\n",
+    "for line in enumerate(f):\n",
+    "    print(f.readline().split(\"\\t\"))\n",
+    "\n",
     "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n"
    ]
   },
@@ -261,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
