--- a/Numpy lab.ipynb
+++ b/Numpy lab.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "array([24.9613063 , 21.28692715, 29.02550097, 25.62324316, 30.62382485])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -228,19 +228,38 @@
      "output_type": "stream",
      "text": [
       "The file has 21 lines.\n",
-      "The file has 8 cols.\n",
-      "['1', '105', '47', '85.4', '1.75', '5.1', '63', '33\\n']\n",
-      "['3', '116', '49', '95.3', '1.98', '8.2', '72', '10\\n']\n",
-      "['5', '112', '51', '89.4', '1.89', '7.0', '72', '95\\n']\n",
-      "['7', '121', '49', '99.8', '2.25', '2.5', '69', '42\\n']\n",
-      "['9', '110', '49', '89.2', '1.83', '7.1', '69', '62\\n']\n",
-      "['11', '114', '47', '94.4', '2.07', '5.3', '74', '90\\n']\n",
-      "['13', '114', '50', '91.6', '2.05', '10.2', '68', '47\\n']\n",
-      "['15', '125', '52', '101.3', '2.19', '10.0', '76', '98\\n']\n",
-      "['17', '106', '46', '87.0', '1.87', '3.6', '62', '18\\n']\n",
-      "['19', '110', '48', '90.5', '1.88', '9.0', '71', '99\\n']\n",
-      "['']\n"
+      "The file has 8 cols.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ,   0.  ],\n",
+       "       [  1.  , 105.  ,  47.  ,  85.4 ,   1.75,   5.1 ,  63.  ,  33.  ],\n",
+       "       [  2.  , 115.  ,  49.  ,  94.2 ,   2.1 ,   3.8 ,  70.  ,  14.  ],\n",
+       "       [  3.  , 116.  ,  49.  ,  95.3 ,   1.98,   8.2 ,  72.  ,  10.  ],\n",
+       "       [  4.  , 117.  ,  50.  ,  94.7 ,   2.01,   5.8 ,  73.  ,  99.  ],\n",
+       "       [  5.  , 112.  ,  51.  ,  89.4 ,   1.89,   7.  ,  72.  ,  95.  ],\n",
+       "       [  6.  , 121.  ,  48.  ,  99.5 ,   2.25,   9.3 ,  71.  ,  10.  ],\n",
+       "       [  7.  , 121.  ,  49.  ,  99.8 ,   2.25,   2.5 ,  69.  ,  42.  ],\n",
+       "       [  8.  , 110.  ,  47.  ,  90.9 ,   1.9 ,   6.2 ,  66.  ,   8.  ],\n",
+       "       [  9.  , 110.  ,  49.  ,  89.2 ,   1.83,   7.1 ,  69.  ,  62.  ],\n",
+       "       [ 10.  , 114.  ,  48.  ,  92.7 ,   2.07,   5.6 ,  64.  ,  35.  ],\n",
+       "       [ 11.  , 114.  ,  47.  ,  94.4 ,   2.07,   5.3 ,  74.  ,  90.  ],\n",
+       "       [ 12.  , 115.  ,  49.  ,  94.1 ,   1.98,   5.6 ,  71.  ,  21.  ],\n",
+       "       [ 13.  , 114.  ,  50.  ,  91.6 ,   2.05,  10.2 ,  68.  ,  47.  ],\n",
+       "       [ 14.  , 106.  ,  45.  ,  87.1 ,   1.92,   5.6 ,  67.  ,  80.  ],\n",
+       "       [ 15.  , 125.  ,  52.  , 101.3 ,   2.19,  10.  ,  76.  ,  98.  ],\n",
+       "       [ 16.  , 114.  ,  46.  ,  94.5 ,   1.98,   7.4 ,  69.  ,  95.  ],\n",
+       "       [ 17.  , 106.  ,  46.  ,  87.  ,   1.87,   3.6 ,  62.  ,  18.  ],\n",
+       "       [ 18.  , 113.  ,  46.  ,  94.5 ,   1.9 ,   4.3 ,  70.  ,  12.  ],\n",
+       "       [ 19.  , 110.  ,  48.  ,  90.5 ,   1.88,   9.  ,  71.  ,  99.  ],\n",
+       "       [ 20.  , 122.  ,  56.  ,  95.7 ,   2.09,   7.  ,  75.  ,  99.  ]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -256,14 +275,17 @@
     "#Your code here\n",
     "#Pseudocode outline below\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
-    "zeros = np.zeros([21,8])\n",
+    "zeros = np.zeros([n_rows, n_cols])\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
     "    #Hint: skip the first row (it's just column names, not the data.)\n",
-    "for line in enumerate(f):\n",
-    "    print(f.readline().split(\"\\t\"))\n",
+    "for n, line in enumerate(f):\n",
+    "    if n>0:\n",
+    "        zeros[n, :] = line.split(\"\\t\")\n",
+    "        \n",
     "\n",
-    "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n"
+    "#4) Preview your results; you should now have a NumPy matrix with the data from the file\n",
+    "zeros"
    ]
   },
   {
@@ -297,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
